--- a/Dang_nhap/Doi_mat_khau.html
+++ b/Dang_nhap/Doi_mat_khau.html
@@ -27,25 +27,25 @@
 
             <section class="menu">
                 <ul>
-                    <a href="http://127.0.0.1:5500/man_chinh/Do_ban_chay.html">
+                    <a href="http://192.168.1.19/man_chinh/Do_ban_chay.html">
                         <li><i class="fas fa-caravan"></i>Đồ bán chạy</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Quan_ly_do_uong.html">
+                    <a href="http://192.168.1.19/man_chinh/Quan_ly_do_uong.html">
                         <li><i class="fas fa-wine-glass-alt"></i>Quản lý đồ uống</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Quan_ly_nguyen_lieu.html">
+                    <a href="http://192.168.1.19/man_chinh/Quan_ly_nguyen_lieu.html">
                         <li><i class="fas fa-seedling"></i>Quản lý nguyên liệu</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Quan_ly_ban.html">
+                    <a href="http://192.168.1.19/man_chinh/Quan_ly_ban.html">
                         <li>Quản lý bàn </li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Tai_khoan_nhan_vien.html">
+                    <a href="http://192.168.1.19/man_chinh/Tai_khoan_nhan_vien.html">
                         <li>Tài khoản nhân viên</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Thong_ke.html">
+                    <a href="http://192.168.1.19/man_chinh/Thong_ke.html">
                         <li>Thống kê</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Khuyen_mai.html">
+                    <a href="http://192.168.1.19/man_chinh/Khuyen_mai.html">
                         <li>Khuyến mại</li>
                     </a>
                 </ul>
