--- a/Dang_nhap/dang_nhap.html
+++ b/Dang_nhap/dang_nhap.html
@@ -29,7 +29,7 @@
                 </div>
             </form>
         </div>
-        <a href="http://127.0.0.1:5500/man_chinh/Do_ban_chay.html"><button type="button" > ĐĂNG NHẬP</button></a>
+        <a href="http://192.168.1.19/man_chinh/Do_ban_chay.html"><button type="button" > ĐĂNG NHẬP</button></a>
     
     </div>
 
