--- a/Them/ThemBan.html
+++ b/Them/ThemBan.html
@@ -27,25 +27,25 @@
 
             <section class="menu">
                 <ul>
-                    <a href="http://127.0.0.1:5500/man_chinh/Do_ban_chay.html">
+                    <a href="http://192.168.1.19/man_chinh/Do_ban_chay.html">
                         <li><i class="fas fa-caravan"></i>Đồ bán chạy</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Quan_ly_do_uong.html">
+                    <a href="http://192.168.1.19/man_chinh/Quan_ly_do_uong.html">
                         <li><i class="fas fa-wine-glass-alt"></i>Quản lý đồ uống</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Quan_ly_nguyen_lieu.html">
+                    <a href="http://192.168.1.19/man_chinh/Quan_ly_nguyen_lieu.html">
                         <li><i class="fas fa-seedling"></i>Quản lý nguyên liệu</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Quan_ly_ban.html">
+                    <a href="http://192.168.1.19/man_chinh/Quan_ly_ban.html">
                         <li>Quản lý bàn </li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Tai_khoan_nhan_vien.html">
+                    <a href="http://192.168.1.19/man_chinh/Tai_khoan_nhan_vien.html">
                         <li>Tài khoản nhân viên</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Thong_ke.html">
+                    <a href="http://192.168.1.19/man_chinh/Thong_ke.html">
                         <li>Thống kê</li>
                     </a>
-                    <a href="http://127.0.0.1:5500/man_chinh/Khuyen_mai.html">
+                    <a href="http://192.168.1.19/man_chinh/Khuyen_mai.html">
                         <li>Khuyến mại</li>
                     </a>
                 </ul>
@@ -61,11 +61,13 @@
                         <span class="dropdown_selected"> Administrator</span>
                         <i class="fas fa-sort-down"></i>
                         <ul class="dropdown_list">
-                            <a href="http://127.0.0.1:5500/Dang_nhap/Doi_mat_khau.html"><li class="dropdown_item">
-                                <span class="dropdown_test"> Đổi Mật Khẩu</span>
-                                <i class="fas fa-key"></i>
-                            </li></a>
-                            <a href="http://127.0.0.1:5500/Dang_nhap/dang_nhap.html" type=" color: #000">
+                            <a href="http://192.168.1.19/Dang_nhap/Doi_mat_khau.html">
+                                <li class="dropdown_item">
+                                    <span class="dropdown_test"> Đổi Mật Khẩu</span>
+                                    <i class="fas fa-key"></i>
+                                </li>
+                            </a>
+                            <a href="http://192.168.1.19/Dang_nhap/dang_nhap.html" type=" color: #000">
                                 <li class="dropdown_item">
                                     <span class="dropdown_test">Đăng Xuất</span>
                                     <i class="fas fa-sign-out-alt"></i>
@@ -78,64 +80,65 @@
                 </section>
             </section>
             <section class="tenQL">
-                <a href="http://127.0.0.1:5500/man_chinh/Quan_ly_ban.html"><span>Quản lý bàn</span></a>
-                <a href="http://127.0.0.1:5500/Them/ThemBan.html"><span>/ Thêm bàn</span></a>
-                
+                <a href="http://192.168.1.19/man_chinh/Quan_ly_ban.html"><span>Quản lý bàn</span></a>
+                <a href="http://192.168.1.19/Them/ThemBan.html"><span>/ Thêm bàn</span></a>
+
             </section>
 
-            <form action="/Cofee_API/tableBan/ban-add.php" method="POST">
-            <section class="thongtinMK">
-                <label for="">Tâng:<input type="text" name="id_tang" ></label> <br>
-                <label for="">Tên bàn:<input type="text" name="soBan" placeholder="Nhập tên bàn"></label> <br>
-                <label for="">Trạng thái:<input type="text" name="trangThai" placeholder="Trạng thái bàn"></label> <br>
-                <div class="oclock">
-                    <span> Ngày:<p id="current-date" style="margin: -17px 0 0 50px;"></p></span> 
-                    <span >Time:<p id="current-time" style="margin: -17px 0 0 50px;"></p></span>
-                </div><br>
-                <Button type="submit">Thêm Bàn</Button>
-            </section>
-        </form>
+            <form action="../Cofee_API/tableBan/ban-add.php" method="post">
+                <section class="thongtinMK">
+                    <label for="">Tâng:<input type="text" name="id_tang"></label> <br>
+                    <label for="">Tên bàn:<input type="text" name="soBan" placeholder="Nhập tên bàn"></label> <br>
+                    <label for="">Trạng thái:<input type="text" name="trangThai" placeholder="Trạng thái bàn"></label>
+                    <br>
+                    <div class="oclock">
+                        <span> Ngày:<p id="current-date" style="margin: -17px 0 0 50px;"></p></span>
+                        <span>Time:<p id="current-time" style="margin: -17px 0 0 50px;"></p></span>
+                    </div><br>
+                    <Button type="submit">Thêm Bàn</Button>
+                </section>
+            </form>
         </main>
     </div>
 
 </body>
 <script>
     function getCurrentTime() {
-            // Tạo đối tượng Date đại diện cho thời gian hiện tại
-            const now = new Date();
+        // Tạo đối tượng Date đại diện cho thời gian hiện tại
+        const now = new Date();
 
-            // Lấy thông tin về giờ, phút và giây
-            const hour = now.getHours();
-            const minute = now.getMinutes();
-            const second = now.getSeconds();
+        // Lấy thông tin về giờ, phút và giây
+        const hour = now.getHours();
+        const minute = now.getMinutes();
+        const second = now.getSeconds();
 
-            // Định dạng lại chuỗi để hiển thị đẹp hơn (nếu muốn)
-            const formattedTime = `${hour.toString().padStart(2, '0')}:${minute.toString().padStart(2, '0')}:${second.toString().padStart(2, '0')}`;
+        // Định dạng lại chuỗi để hiển thị đẹp hơn (nếu muốn)
+        const formattedTime = `${hour.toString().padStart(2, '0')}:${minute.toString().padStart(2, '0')}:${second.toString().padStart(2, '0')}`;
 
-            // Hiển thị giờ hiện tại trong thẻ p có id="current-time"
-            document.getElementById('current-time').textContent = formattedTime;
-        }
+        // Hiển thị giờ hiện tại trong thẻ p có id="current-time"
+        document.getElementById('current-time').textContent = formattedTime;
+    }
 
-        // Gọi hàm getCurrentTime mỗi giây một lần để cập nhật giờ hiện tại
-        setInterval(getCurrentTime, 1000);
-        function getCurrentDate() {
-            // Tạo đối tượng Date đại diện cho thời gian hiện tại
-            const now = new Date();
+    // Gọi hàm getCurrentTime mỗi giây một lần để cập nhật giờ hiện tại
+    setInterval(getCurrentTime, 1000);
+    function getCurrentDate() {
+        // Tạo đối tượng Date đại diện cho thời gian hiện tại
+        const now = new Date();
 
-            // Lấy thông tin về ngày, tháng và năm
-            const day = now.getDate();
-            const month = now.getMonth() + 1; // Tháng trong JavaScript bắt đầu từ 0 (0 -> Tháng 1)
-            const year = now.getFullYear();
+        // Lấy thông tin về ngày, tháng và năm
+        const day = now.getDate();
+        const month = now.getMonth() + 1; // Tháng trong JavaScript bắt đầu từ 0 (0 -> Tháng 1)
+        const year = now.getFullYear();
 
-            // Định dạng lại chuỗi để hiển thị đẹp hơn (nếu muốn)
-            const formattedDate = `${day.toString().padStart(2, '0')}/${month.toString().padStart(2, '0')}/${year}`;
+        // Định dạng lại chuỗi để hiển thị đẹp hơn (nếu muốn)
+        const formattedDate = `${day.toString().padStart(2, '0')}/${month.toString().padStart(2, '0')}/${year}`;
 
-            // Hiển thị ngày hiện tại trong thẻ p có id="current-date"
-            document.getElementById('current-date').textContent = formattedDate;
-        }
+        // Hiển thị ngày hiện tại trong thẻ p có id="current-date"
+        document.getElementById('current-date').textContent = formattedDate;
+    }
 
-        // Gọi hàm getCurrentDate khi trang được tải và sau đó mỗi ngày một lần để cập nhật ngày hiện tại
-        getCurrentDate();
+    // Gọi hàm getCurrentDate khi trang được tải và sau đó mỗi ngày một lần để cập nhật ngày hiện tại
+    getCurrentDate();
 </script>
 
 </html>
