--- a/Them/ThemNguyenLieu.html
+++ b/Them/ThemNguyenLieu.html
@@ -69,12 +69,13 @@
                 
             </section>
 
-            <form action="/Cofee_API/tableNguyenLieu/nguyenLieu-add.php" method="POST">
+            <form action="/duantotnghiep/Cofee_API/tableNguyeLieu/nguyenLieu-add.php" method="POST">
             <section class="thongtinMK">
-                <label for="">Tên NL:<input type="text" name="ten_nhienLieu" placeholder="Nhập tên Nguyên Liệu"></label> <br>
+                <label for="">Tên NL:<input type="text" name="ten_nguyenLieu" placeholder="Nhập tên Nguyên Liệu"></label> <br>
                 <label for="">Giá :<input type="text" name="price" placeholder="Nhập giá "></label> <br>
                 <label for="">Số lượng:<input type="number" name="soLuong" ></label> <br>
-                
+                <label for="">User:<input type="text" name="id_User" ></label> <br>
+
                 <div class="oclock">
                     <span> Ngày:<p id="current-date" style="margin: -17px 0 0 50px;"></p></span> 
                     <span >Time:<p id="current-time" style="margin: -17px 0 0 50px;"></p></span>
