--- a/Them/ThemSanPham.html
+++ b/Them/ThemSanPham.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thêm Sản Phẩm</title>
     <link rel="stylesheet" href="ThemSanPham.css">
-    <link rel="stylesheet" href="/Cofee_API/tableSanPham/sanPham-add.php">
     <script src="https://kit.fontawesome.com/e123c1a84c.js" crossorigin="anonymous"></script>
 </head>
 
@@ -68,11 +68,11 @@
             </section>
             <section class="tenQL">
                 <a href="http://127.0.0.1:5500/duantotnghiep/man_chinh/Quan_ly_do_uong.html"><span>Quản lý đồ uống</span></a>
-                <a href="http://127.0.0.1:5500/duantotnghiep/Them/ThemSanPham.html"><span>/ Thêm sản phẩm</span></a>
+                <a href="http://localhost/Coffebe/duantotnghiep/Cofee_API/tableSanPham/sanPham-add.php"><span>/ Thêm sản phẩm</span></a>
 
             </section>
 
-            <form action="/Cofee_API/tableSanPham/sanPham-add.php" method="POST">
+            <form action="/duantotnghiep/Cofee_API/tableSanPham/sanPham-add.php" method="POST">
                 <section class="thongtinMK">
                     <label for="">Ảnh SP:<input type="file" name="anhSanPham"></label> <br>
                     <label for="">Tên SP:<input type="text" name="ten_sp" placeholder="Nhập tên sản phẩm"></label> <br>
