--- a/man_chinh/Quan_ly_do_uong.html
+++ b/man_chinh/Quan_ly_do_uong.html
@@ -97,7 +97,7 @@
 
                <section class="thoigian">
 
-                <a href="http://127.0.0.1:5500/duantotnghiep/Them/ThemSanPham.html" class="themDS"><button class="">Thêm Đồ Uống</button></a>
+                <a href="http://localhost/Coffebe/duantotnghiep/Cofee_API/tableSanPham/sanPham-add.php" class="themDS"><button class="">Thêm Đồ Uống</button></a>
                </section>
 
                <section>
