--- a/man_chinh/Khuyen_mai.html
+++ b/man_chinh/Khuyen_mai.html
@@ -68,7 +68,7 @@
 
                <section class="thoigian">
                 <input type="date"> -- <input type="date" name="" id="">
-                <a href="http://127.0.0.1:5500/duantotnghiep/Them/GiamGia.html" class="themDS"><button class="">Thêm Khuyến Mại</button></a>
+                <a href="http://localhost/Coffebe/duantotnghiep/Cofee_API/tableGiam/sale-add.php" class="themDS"><button class="">Thêm Khuyến Mại</button></a>
                </section>
             </main>
         </div>
