--- a/man_chinh/Do_ban_chay.html
+++ b/man_chinh/Do_ban_chay.html
@@ -69,7 +69,7 @@
 
                <section class="thoigian">
                 <input type="date"> -- <input type="date" name="" id="">
-                <a href="http://127.0.0.1:5500/duantotnghiep/Them/ThemDanhSach.html" class="themDS"><button class="">Thêm DS</button></a>
+                <a href="http://localhost/Coffebe/duantotnghiep/Cofee_API/tableDanhMuc/danhMuc-add.php" class="themDS"><button class="">Thêm DS</button></a>
                </section>
                <h3 style="margin-left: 20px;">Đồ uống</h3>
                <div id="container">
