--- a/man_chinh/Quan_ly_ban.html
+++ b/man_chinh/Quan_ly_ban.html
@@ -67,7 +67,7 @@
                </section>
 
                <section class="thoigian">
-                <a href="http://127.0.0.1:5500/duantotnghiep/Them/ThemBan.html" class="themDS"><button class="">Thêm Bàn</button></a>
+                <a href="http://localhost/Coffebe/duantotnghiep/Cofee_API/tableBan/ban-add.php" class="themDS"><button class="">Thêm Bàn</button></a>
                </section>
 
                
