--- a/man_chinh/Quan_ly_nguyen_lieu.html
+++ b/man_chinh/Quan_ly_nguyen_lieu.html
@@ -106,7 +106,7 @@
                </section>
 
                <section class="thoigian">
-                <a href="http://127.0.0.1:5500/duantotnghiep/Them/ThemNguyenLieu.html" class="themDS"><button class="">Thêm Nguyên Liệu</button></a>
+                <a href="http://localhost/Coffebe/duantotnghiep/Cofee_API/tableNguyeLieu/nguyenLieu-add.php" class="themDS"><button class="">Thêm Nguyên Liệu</button></a>
                </section>
 
                <section>
