--- a/man_chinh/Tai_khoan_nhan_vien.html
+++ b/man_chinh/Tai_khoan_nhan_vien.html
@@ -106,7 +106,7 @@
                </section>
 
                <section class="thoigian"> 
-                <a href="http://127.0.0.1:5500/duantotnghiep/Them/ThemNhanVien.html" class="themDS"><button class="">Thêm Nhân Viên</button></a>
+                <a href="http://localhost/Coffebe/duantotnghiep/Cofee_API/tableUser/user-add.php" class="themDS"><button class="">Thêm Nhân Viên</button></a>
                </section>
 
                <section>
