--- a/man_chinh/Thong_ke.html
+++ b/man_chinh/Thong_ke.html
@@ -39,7 +39,7 @@
                     <a href="http://127.0.0.1:5500/duantotnghiep/man_chinh/Quan_ly_ban.html">
                         <li>Quản lý bàn </li>
                     </a>
-                    <a href="http://127.0.0.1:5500/duantotnghiep/man_chinh/Tai_khoan_nhan_vien.html">
+                    <a href="http://localhost/Coffebe/duantotnghiep/CoffeOder/user-get.php">
                         <li>Tài khoản nhân viên</li>
                     </a>
                     <a href="http://127.0.0.1:5500/duantotnghiep/man_chinh/Thong_ke.html">
