--- a/man_chinh/Thong_ke.html
+++ b/man_chinh/Thong_ke.html
@@ -27,7 +27,7 @@
 
             <section class="menu">
                 <ul>
-                    <a href="http://127.0.0.1:5500/duantotnghiep/man_chinh/Do_ban_chay.html">
+                    <a href="http://localhost/Coffebe/duantotnghiep/CoffeOder/danhMuc-get.php">
                         <li><i class="fas fa-caravan"></i>Đồ bán chạy</li>
                     </a>
                     <a href="http://127.0.0.1:5500/duantotnghiep/man_chinh/Quan_ly_do_uong.html">
