--- a/man_chinh/Khuyen_mai.html
+++ b/man_chinh/Khuyen_mai.html
@@ -33,7 +33,7 @@
                     <a href="../man_chinh/Quan_ly_nguyen_lieu.html"><li><i class="fas fa-seedling"></i>Quản lý nguyên liệu</li></a>
                     <a href="../CoffeOder/ban-get.php"><li>Quản lý bàn </li></a>
                     <a href="../CoffeOder/user-get.php"><li>Tài khoản nhân viên</li></a>
-                    <a href=""><li>Thống kê</li></a>
+                    <a href="../CoffeOder/hoaDonct-get.php"><li>Hóa đơn</li></a>
                     <a href="../man_chinh/Khuyen_mai.html"><li>Khuyến mại</li></a> 
                 </ul>
             </section>
