--- a/man_chinh/Tai_khoan_nhan_vien.html
+++ b/man_chinh/Tai_khoan_nhan_vien.html
@@ -86,17 +86,20 @@
                             <span class="dropdown_selected">Administrator</span>
                             <i class="fas fa-sort-down"></i>
                             <ul class="dropdown_list">
-                                <a href="../Dang_nhap/Doi_mat_khau.html"><li class="dropdown_item">
-                                    <span class="dropdown_test"> Đổi Mật Khẩu</span>
-                                    <i class="fas fa-key"></i>
-                                </li></a>
-                                <a href="../Dang_nhap/dang_nhap.html" type=" color: #000">
-                                    <li class="dropdown_item">
-                                        <span class="dropdown_test">Đăng Xuất</span>
-                                        <i class="fas fa-sign-out-alt"></i>
-                                    </li>
-                                </a>
-                            </ul>
+                              <a href="#">
+                                  <li class="dropdown_item">
+                                      <span class="dropdown_test"> Đổi Mật Khẩu</span>
+                                      <i class="fas fa-key"></i>
+                                  </li>
+                              </a>
+                              <a href="../CoffeOder/login.php" type=" color: #000">
+                                  <li class="dropdown_item">
+                                      <span class="dropdown_test">Đăng Xuất</span>
+                                      <i class="fas fa-sign-out-alt"></i>
+                                  </li>
+                              </a>
+  
+                          </ul>
                         </section>
                         
                     </section>                
