--- a/man_chinh/Thong_ke.html
+++ b/man_chinh/Thong_ke.html
@@ -99,18 +99,19 @@
                         <span class="dropdown_selected">Administrator</span>
                         <i class="fas fa-sort-down"></i>
                         <ul class="dropdown_list">
-                            <a href="http://127.0.0.1:5500/duantotnghiep/Dang_nhap/Doi_mat_khau.html">
+                            <a href="#">
                                 <li class="dropdown_item">
                                     <span class="dropdown_test"> Đổi Mật Khẩu</span>
                                     <i class="fas fa-key"></i>
                                 </li>
                             </a>
-                            <a href="http://127.0.0.1:5500/duantotnghiep/Dang_nhap/dang_nhap.html" type=" color: #000">
+                            <a href="../CoffeOder/login.php" type=" color: #000">
                                 <li class="dropdown_item">
                                     <span class="dropdown_test">Đăng Xuất</span>
                                     <i class="fas fa-sign-out-alt"></i>
                                 </li>
                             </a>
+
                         </ul>
                     </section>
 
