--- a/man_chinh/Quan_ly_nguyen_lieu.html
+++ b/man_chinh/Quan_ly_nguyen_lieu.html
@@ -220,12 +220,15 @@
         border-bottom: 2px solid #D9D9D9;
         padding-left: 50px;
         background-color: #fff;
+
     }
 
     .themDS {
         position: absolute;
         right: 30px;
         width: 150px;
+        margin-top: -15px;
+
     }
 
     .themDS button {
